Started rewriting the project with classes. Will still use some global pointers but not nearly as many as before

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,10 @@
+TODO:
+	Figure out which pointers NEED to be global pointers and which should be members of various classes.
+	Error messages at gHR checks and whatnot
+	Error blob messages are probably a good idea
+
+
+
 
 
 ------------------------------ Mandatory ---------------------------------------
