--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,8 @@
 TODO:
-	Figure out which pointers NEED to be global pointers and which should be members of various classes.
 	Error messages at gHR checks and whatnot
 	Error blob messages are probably a good idea
-	Rewriting the pointers as a ComPtr should make 
-	sending pointers to functions easier.
+	ShaderHandler
+	Rename Fragment shaders to pixel shaders
 
 
 
