Continued work on the Compute shader render loop

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@ TODO:
 	Error blob messages are probably a good idea
 	ShaderHandler
 	Rename Fragment shaders to pixel shaders
+	Write a funtion for the error handling
 
 
 
