--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 TODO:
 	Error messages at gHR checks and whatnot
 	Error blob messages are probably a good idea
-	ShaderHandler
+	ShaderHandler. ComputeShader and Light Pass should use the same vertex shader
 	Rename Fragment shaders to pixel shaders
 	Write a funtion for the error handling
 
